# salafi-video-hub

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
docs/: AUTO_UPDATES.md  CONTENT_POLICY.md
scripts/: configure-updater-repo.ps1
src/: App.tsx  i18n.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: QURAN_TEXT_NOTICE.txt  QURAN_WARSH_NOTICE.txt  quran-warsh.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: diagnostics.rs  downloader.rs  ffmpeg.rs  file_ops.rs  mod.rs  playback.rs  playlist.rs  quran.rs  radio.rs  reminder.rs  settings.rs  video.rs  youtube.rs
src-tauri/src/db/: mod.rs  playlist.rs  reminder.rs  schema.rs  settings.rs  video.rs
src-tauri/src/models/: mod.rs  playlist.rs  reminder.rs  settings.rs  video.rs
src-tauri/src/services/: metadata.rs  mod.rs  reminder_check.rs  scanner.rs  thumbnail_gen.rs
src-tauri/src/utils/: ffmpeg_finder.rs  mod.rs  notifications.rs  paths.rs  process.rs
src/hooks/: useAppEvents.ts  useKeyboardShortcuts.ts  useTauriCommands.ts
src/pages/: Dashboard.tsx  Downloads.tsx  Library.tsx  PlayerPage.tsx  Quran.tsx  Radio.tsx  Reminders.tsx  Settings.tsx  Watch.tsx
src/store/: appStore.ts  downloadStore.ts  playerStore.ts  quranStore.ts  radioStore.ts  remindersStore.ts  settingsStore.ts  updateStore.ts  watchStore.ts
src/types/: index.ts
src/utils/: async.ts  constants.ts  formatBytes.ts  formatTime.ts  pathHash.ts  reminderAudio.ts  (+1 more)
(+26 files in other folders)
